<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="100dp"
    tools:context="com.example.android.myappportfolio.MainActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/style_title"
        android:layout_height="30dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button1"
        style="@style/style_btn"
        android:layout_below="@id/textView"
        android:onClick="onClick"
        android:text="@string/btn1_txt" />

    <Button
        android:id="@+id/button2"
        style="@style/style_btn"
        android:layout_below="@id/button1"
        android:onClick="onClick"
        android:text="@string/btn2_txt" />

    <Button
        android:id="@+id/button3"
        style="@style/style_btn"
        android:layout_below="@id/button2"
        android:onClick="onClick"
        android:text="@string/btn3_txt" />

    <Button
        android:id="@+id/button4"
        style="@style/style_btn"
        android:layout_below="@id/button3"
        android:onClick="onClick"
        android:text="@string/btn4_txt" />

    <Button
        android:id="@+id/button5"
        style="@style/style_btn"
        android:layout_below="@id/button4"
        android:onClick="onClick"
        android:text="@string/btn5_txt" />

    <Button
        android:id="@+id/button6"
        style="@style/style_btn"
        android:layout_below="@id/button5"
        android:onClick="onClick"
        android:text="@string/btn6_txt" />
</RelativeLayout>
